fixed responsive logo

--- a/static/SLQT-FIVV.html
+++ b/static/SLQT-FIVV.html
@@ -22,17 +22,17 @@
   <body>
 
 
-
     <!-- ====== The Main wrapper div starts ============ -->
-    <div class="wrapper container">
-        
+          
     <!-- ===== header content logo + blazon ===== -->
-      <div class="col-sm-12 clouds-logo">
-          <img class="img-responsive hidden-xs clouds" src="img/clouds.png" alt="nuages">
-          <img class="img-responsive hidden-xs logo-big" src="img/logo-only.png" alt="Blazon de la Fédération Internationale de Vo Viet Nam FIVV - SLQT Son Long Quyen Thuat">
+      <header class="logo-container">
+          <img class="hidden-xs clouds" src="img/clouds.png" alt="nuages">
+          <img class="hidden-xs logo-big" src="img/logo-only.png" alt="Blazon de la Fédération Internationale de Vo Viet Nam FIVV - SLQT Son Long Quyen Thuat">
           <img class="img-responsive visible-xs logo-small" src="img/logo-sm.png" alt="Blazon de la Fédération Internationale de Vo Viet Nam FIVV - SLQT Son Long Quyen Thuat">
-      </div>
+      </header>
     <!-- ===== /end header content logo + blazon ===== -->
+
+    <div class="wrapper container">
 
       <div class="bg-content">
 
@@ -42,7 +42,8 @@
             <div class="navbar-header col-md-12">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <p class="sr-only">Toggle navigation</p>
-                <span class="glyphicon glyphicon-chevron-down"></span></p>
+                  <span class="glyphicon glyphicon-chevron-down"></span>
+                </p>
               </button>
             </div>
 
@@ -122,7 +123,7 @@
               <div class="row banner">
                 <a href="#"> 
                   <div class="banner-label col-sm-2">
-                    <h4 class="banner-name">Bannière</h4>
+                    <!-- <h4 class="banner-name">Bannière</h4> -->
                     <h3 class="category">Actualités Internationales</h3>
                   </div>
                   <div class="banner-article col-sm-10 ">
