--- a/static/SLQT-FIVV.html
+++ b/static/SLQT-FIVV.html
@@ -37,13 +37,12 @@
       <div class="bg-content">
 
         <!-- ============ nav menu bar ==================== -->
-          <nav class="navbar navbar-default row" role="navigation">
+          <nav class="navbar navbar-default" role="navigation">
             <!-- navbar toggle -->
-            <div class="navbar-header col-md-12">
+            <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <p class="sr-only">Toggle navigation</p>
-                  <span class="glyphicon glyphicon-chevron-down"></span>
-                </p>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="glyphicon glyphicon-chevron-down"></span>
               </button>
             </div>
 
