--- a/static/SLQT-FIVV.html
+++ b/static/SLQT-FIVV.html
@@ -199,24 +199,26 @@
             <!-- =================== SECTION agenda ============== -->
               <section id="agenda">
                 <h1>AGENDA</h1>
-                  <article class="first-agenda">
-                    <date>10 sept <span>2014</span></date>
-                    <h3>First agenda title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, cumque eum incidunt ex temporibus enim at nesciunt iste molestiae eius! Velit qui accusantium aliquam pariatur ipsum mollitia voluptatibus eum fuga.</p>
-                    <img class="img-responsive" src="img/images/agenda-demo.jpg" alt="">
-                  </article>
-                  <article class="second-agenda">
-                    <date>10 oct <span>2014</span></date>
-                    <h3>Second agenda title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, cumque eum incidunt ex temporibus enim at nesciunt iste molestiae eius! Velit qui accusantium aliquam pariatur ipsum mollitia voluptatibus eum fuga.</p>
-                    <img class="img-responsive" src="img/images/agenda-vietnam.jpg" alt="">
-                  </article>
-                  <article class="third-agenda">
-                    <date>10 oct <span>2014</span></date>
-                    <h3>Third agenda title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, cumque eum incidunt ex temporibus enim at nesciunt iste molestiae eius! Velit qui accusantium aliquam pariatur ipsum mollitia voluptatibus eum fuga.</p>
-                    <!-- <img class="img-responsive" src="img/images/agenda-demo.jpg" alt=""> -->
-                  </article>
+                  <div class="agenda-container">
+                    <article class="first-agenda">
+                      <date>30 Juin<span class="year">2014</span></date>
+                      <h3>Titre d'article d'agenda Lorem ipsum dolor sit amet. Ce titre est plus long que les autres.</h3>
+                      <img class="img-responsive" src="img/images/agenda-demo.jpg" alt="">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, cumque eum incidunt ex temporibus enim at nesciunt iste molestiae eius! Velit qui accusantium aliquam pariatur ipsum mollitia voluptatibus eum fuga.</p>
+                    </article>
+                    <article class="second-agenda">
+                      <date>17 Sept<span class="year">2014</span></date>
+                      <h3>Titre très court</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, cumque eum incidunt ex temporibus enim at nesciunt iste molestiae eius! Velit qui accusantium aliquam pariatur ipsum mollitia voluptatibus eum fuga.</p>
+                    </article>
+                    <article class="third-agenda">
+                      <date>23 Oct<span class="year">2014</span></date>
+                      <h3>Third agenda title Lorem ipsum dolor sit amet.</h3>
+                      <img class="img-responsive" src="img/images/agenda-vietnam.jpg" alt="">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, cumque eum incidunt ex temporibus enim at nesciunt iste molestiae eius! Velit qui accusantium aliquam pariatur ipsum mollitia voluptatibus eum fuga.</p>
+                      <!-- <img class="img-responsive" src="img/images/agenda-demo.jpg" alt=""> -->
+                    </article>
+                  </div>
               </section>
             <!-- =================== /end agenda ============== -->
 
