attempted to isolate navbar + separated custom from bootstrap

--- a/static/SLQT-FIVV.html
+++ b/static/SLQT-FIVV.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap using LESS for customization -->
+    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/custom-bootstrap.css" rel="stylesheet" media="screen">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -314,7 +315,6 @@
             </div>
           </div>
         <!-- =================== /end gallery samples ============== -->
-        
 
         <!-- =================== color samples ============== -->
           <div class="color-samples row">
